@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-30T16:08:55Z",
+  "timestamp" : "2022-08-31T00:47:21Z",
   "count_outdated" : 48,
   "uniques_outdated" : 18,
-  "count" : 54,
-  "uniques" : 21,
+  "count" : 56,
+  "uniques" : 22,
   "views" : [
     {
       "timestamp": "2022-08-24T00:00:00Z",
@@ -23,6 +23,13 @@
       "timestamp": "2022-08-29T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-30T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
