@@ -1,6 +1,6 @@
 {
-  "count": 6,
-  "uniques": 3,
+  "count": 8,
+  "uniques": 4,
   "views": [
     {
       "timestamp": "2022-08-24T00:00:00Z",
@@ -15,6 +15,11 @@
     {
       "timestamp": "2022-08-29T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-30T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
