@@ -1,3 +1,11 @@
+2022-08-31T00:47:21Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2960575011
+* notice: last 14d: unq all: 4 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 18 48 / 21 54
+* notice: next accum: outdated-unq outdated-all / unq all: 18 48 / 22 56
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-08-30]
+
 2022-08-30T16:08:55Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2957804138
 * notice: last 14d: unq all: 3 6
